feat:카테고리/판매자 아이디/물품명 조회 기능